[package]
name = "image_base64_rs"
version = "0.2.0"
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml",
]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
regex = "1.5.4"
rustc-serialize = "0.3.24"
base64 = "0.12.0"
